feat(server): ADD getTaskOverview and IMPROVE getTasks
