# be-steady-server/src/controllers/tasks.controller.ts
@@ -1,8 +1,8 @@
 import { NextFunction, Request, Response } from 'express';
 import { Container } from 'typedi';
 import { TaskService } from '@services/tasks.service';
-import { CreateTaskDto } from '@dtos/tasks.dto';
-import { Task } from '@interfaces/tasks.interface';
+import { CreateTaskDto, ProjectIdDto, FindAllTasksQueryDto } from '@dtos/tasks.dto';
+import { Task, TaskOverview } from '@interfaces/tasks.interface';
 
 export class TaskController {
   public task = Container.get(TaskService);
@@ -18,12 +18,24 @@ export class TaskController {
     }
   };
 
-  public findAllTasksByProjectId = async (req: Request, res: Response, next: NextFunction) => {
+  public findAllTasks = async (req: Request<ProjectIdDto, {}, {}, FindAllTasksQueryDto>, res: Response, next: NextFunction) => {
     try {
-      const projectId: string = req.params.projectId;
-      const tasks: Task[] = await this.task.findAllTasksByProjectId(projectId);
+      const projectId = req.params.projectId;
+      const fromDate = req.query.fromDate;
+      const toDate = req.query.toDate;
+      const tasks: Task[] = await this.task.findAllTasks(projectId, fromDate, toDate);
 
       res.status(200).json(tasks);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public getTaskOverviewByProjectId = async (req: Request<ProjectIdDto, {}, {}, {}>, res: Response, next: NextFunction) => {
+    try {
+      const projectId = req.params.projectId;
+      const taskOverview: TaskOverview = await this.task.findTaskOverviewByProjectId(projectId);
+      res.status(200).json(taskOverview);
     } catch (error) {
       next(error);
     }
