# be-steady-server/src/interfaces/tasks.interface.ts
@@ -3,3 +3,11 @@ export interface Task {
   datetime: Date;
   projectId: string; // FK
 }
+
+export interface TaskOverview {
+  firstDate?: Date;
+  lastDate?: Date;
+  nTotalTasks: number;
+  recentTaskDaysStreak: number; // 오늘 제외 며칠 연속인지
+  maxTaskDaysStreak: number; // 최대 연속 일수
+}
